[project]
name = "lru-cache-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.115.11)",
    "uvicorn (==0.34.0)",
    "environ-config (==24.1.0)",
    "python-dotenv (==1.0.1)",
    "pytest (==8.3.5)",
    "httpx (==0.28.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
